# passmage

./: LICENSE  LICENSE.md  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  prelude.rs
src-tauri/src/utils/: crypto.rs  password.rs  random.rs
src/components/: Editor.tsx  EntryMenuItem.tsx  Modal.tsx  ThemeToggle.tsx
src/components/common/: Button.tsx  Indicator.tsx  Modal.tsx  PasswordBreakdown.tsx  Tile.tsx
src/components/common/style/: borderClasses.ts  textClasses.ts
src/components/editor/: EntryButton.tsx  EntryMenuItem.tsx  SearchBar.tsx
src/components/form/: EntryForm.tsx  Label.tsx  NewVaultForm.tsx  OpenVaultForm.tsx  PasswordGenerator.tsx
src/components/form/generator/: PasswordGenerator.tsx  PasswordShowcase.tsx
src/components/form/input/: Checkbox.tsx  (+10 more)
src/components/input/: FileInput.tsx  PasswordInput.tsx
src/components/provider/: SettingsProvider.tsx  ThemeProvider.tsx  VaultProvider.tsx
src/components/routes/: Editor.tsx  Home.tsx
src/components/settings/: Settings.tsx  SettingsButton.tsx
src/hooks/: types.ts  useClipboard.ts  useHotkeyCopy.ts  useSettings.ts  useStorage.ts  useVault.ts
src/models/: EntryModel.ts  HomeMode.ts  Settings.ts  VaultModel.ts
src/models/input/: ValidationState.ts
src/utils/: crypto.ts  csv.ts  dialog.ts  fs.ts  settingsStore.ts  styles.ts
src/utils/dialog/: dialog.ts  types.ts
(+7 files in other folders)
